Edit Test.html - added a paragraph.

--- a/Test.html
+++ b/Test.html
@@ -7,5 +7,6 @@
 	</head>
 <body>
 	<p><h1>This is a sample webpage without CSS and Javascript inside. This was made to see how far I have gone throughout my journey with the Odin Project.</p></h1>
+	<p><h2>I also wanna see if I can add a paragraph and then upload this file to Github. If you see this, it is working. Ehe.</p></h2>
 </body>
 </html>
