--- a/Test.html
+++ b/Test.html
@@ -11,5 +11,10 @@
 	<p><h2>Trying to add a link to <strong>Google</strong>. Here it is: <a href="http://www.google.com/"">Click here for the link.</a></p></h3>
 	<p><h2>OOOOHHH seems like the link is working. That's niceeee.</p></h2>
 	<p><h2>Added this on my third study.</h2></p>
+	<p>Below is an ordered list of things I will be doing today.</p>
+	<ol>
+		<li>Refresh on HTML especially on ordered and unordered lists.</li>
+		<li>Refresh on image and hyperlinks for HTML</li>
+	</ol>
 </body>
 </html>
