Added lists of things to do in Test.html.

--- a/Test.html
+++ b/Test.html
@@ -14,7 +14,7 @@
 	<p>Below is an ordered list of things I will be doing today.</p>
 	<ol>
 		<li>Refresh on HTML especially on ordered and unordered lists.</li>
-		<li>Refresh on image and hyperlinks for HTML</li>
+		<li>Refresh on image and hyperlinks for HTML.</li>
 	</ol>
 </body>
 </html>
