--- a/Test.html
+++ b/Test.html
@@ -8,7 +8,7 @@
 <body>
 	<p><h1>This is a sample webpage without CSS and Javascript inside. This was made to see how far I have gone throughout my journey with the Odin Project.</p></h1>
 	<p><h2>I also wanna see if I can add a paragraph and then upload this file to Github. If you see this, it is working. Ehe.</p></h2>
-	<p><h2>Trying to add a link to <strong>Google</strong>. Here it is: <a href="http://www.google.com/"">Click here for the link.</a></p></h3>
+	<p><h2>Trying to add a link to <strong>Google</strong>. Here it is: <a href="http://www.google.com/">Click here for the link.</a></p></h3>
 	<p><h2>OOOOHHH seems like the link is working. That's niceeee.</p></h2>
 	<p><h2>Added this on my third study.</h2></p>
 	<p>Below is an ordered list of things I will be doing today.</p>
